<resources>
    <string name="app_name">Practicum-Android-Diploma</string>
    <string name="title_main">Поиск вакансий</string>
    <string name="title_settings_filter">Настройки фильтрации</string>
    <string name="title_choosing_a_work">Выбор места работы</string>
    <string name="title_choosing_a_country">Выбор страны</string>
    <string name="title_choosing_a_region">Выбор региона</string>
    <string name="title_choosing_a_industry">Выбор отрасли</string>
    <string name="title_vacancy">Вакансия</string>
    <string name="title_favorite">Избранное</string>
    <string name="title_team">Команда</string>
    <string name="hint_enter_your_request">Введите запрос</string>
    <string name="hint_place_of_work">Место работы</string>
    <string name="hint_industry">Отрасль</string>
    <string name="hint_entre_industry">Введите отрасль</string>
    <string name="hint_title_expected_salary">Ожидаемая зарплата</string>
    <string name="hint_enter_amount">Введите сумму</string>
    <string name="hint_country">Страна</string>
    <string name="hint_region">Регион</string>
    <string name="hint_enter_region">Введите регион</string>
    <string name="placeholder_no_internet">Нет интернета</string>
    <string name="placeholder_unable_to_retrieve_job_listing">Не удалось получить\n&#160;&#160;&#160;&#160;&#160;список вакансий</string>
    <string name="placeholder_no_industry">Такой отросли нету</string>
    <string name="placeholder_list_is_empty">Не удалось получить\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;список</string>
    <string name="placeholder_there_is_no_such_region">Такого региона нет</string>
    <string name="placeholder_failed_to_get_list">Не удалось получить список</string>
    <string name="placeholder_vacancy_not_found_or_deleted">Вакансия не найдена или удалена</string>
    <string name="placeholder_server_error">Ошибка сервера</string>
    <string name="placeholder_the_list_is_empty">Список пуст</string>
    <string name="text_hide_jobs_without_salary">Не показывать без зарплаты</string>
    <string name="button_choose">Выбрать</string>
    <string name="button_reset">Сбросить</string>
    <string name="button_apply">Применить</string>
    <string name="button_nav_main">Главная</string>
    <string name="button_nav_favorite">Избранное</string>
    <string name="button_nav_team">Команда</string>
    <string name="text_found_vacancies_example">Найдено 286 вакансий</string>
    <string name="text_job_vacancies_example">Android-разработчик, Москва</string>
    <string name="text_company_vacancies_example">Еда</string>
    <string name="text_payday_vacancies_example">от 100 000 ₽</string>
    <string name="text_job_vacancies_example1">Android-разработчик</string>
    <string name="text_required_experience_example">От 1 года до 3 лет</string>
    <string name="text_type_employment_example">Полная занятость, Удаленная работа</string>
    <string name="text_job_city_example">Москва</string>
    <string name="text_responsibilities_example">• Разрабатывать новую функциональность приложения\n• Помогать с интеграцией нашего SDK в другие приложенияПроектировать большие новые модули\n• Писать UI- и unit-тесты\n• Следить за работоспособностью сервиса и устранять технический долг</string>
    <string name="text_requirements_example">• 100% Kotlin\n• WebRTC\n• CI по модели Trunk Based Development</string>
    <string name="text_conditions_example">• сильная команда, с которой можно расти\n• возможность влиять на процесс и результат\n• расширенная программа ДМС:\n стоматология, обследования, вызов врача\n на дом и многое другое</string>
    <string name="text_key_skills_example">• Знание классических алгоритмов и структуры данных\n• Программирование для Android больше одного года\n• Знание WebRTC</string>
    <plurals name="text_found_vacancies">
        <item quantity="one">Найдена %d вакансия</item>
        <item quantity="few">Найдено %d вакансии</item>
        <item quantity="many">Найдено %d вакансий</item>
        <item quantity="other">Найдено %d вакансий</item>
    </plurals>
    <string name="text_team_title">Над приложением работали</string>
    <string name="text_team_bukus">Букус Даниил</string>
    <string name="text_team_petrusсhak">Петрущак Назар</string>
    <string name="text_salary_not_specified">Зарплата не указана</string>
    <string name="text_salary_from">от %1$s %2$s</string>
    <string name="text_salary_to">до %1$s %2$s</string>
    <string name="text_salary_from_to">от %1$s до %2$s %3$s</string>
    <string name="text_no_such_vacancy">Таких вакансий нет</string>
    <string name="text_job_location_format">%1$s, %2$s</string>
    <string name="text_required_experience">Требуемый опыт</string>
    <string name="text_job_description">Описание вакансии</string>
    <string name="text_responsibilities">Обязанности</string>
    <string name="text_requirements">Требования</string>
    <string name="text_conditions">Условия</string>
    <string name="text_key_skills">Ключевые навыки</string>
    <string name="currency_rub">₽</string>
    <string name="currency_rur">₽</string>
    <string name="currency_usd">$</string>
    <string name="currency_eur">€</string>
    <string name="currency_hkd">HK$</string>
    <string name="currency_aud">A$</string>
    <string name="currency_gbp">£</string>
    <string name="currency_sgd">S$</string>
    <string name="currency_byr">Br</string>
    <string name="currency_kzt">₸</string>
    <string name="currency_uah">₴</string>
    <string name="currency_azn">₼</string>
    <string name="currency_uzs">сум</string>
    <string name="currency_gel">₾</string>
    <string name="currency_kgt">с</string>
    <string name="check_internet_connection">Проверьте подключение к интернету</string>
    <string name="error_occurred">Произошла ошибка</string>
    <string name="error_no_internet">Нет подключения к интернету</string>
    <string name="error_server">Ошибка сервера</string>
    <string name="error_data_format">Неверный формат данных</string>
    <string name="error_vacancy_not_found">Вакансия не найдена</string>
    <string name="error_response_empty">Пустой ответ</string>
    <string name="error_unnown">Неизвесная ошибка</string>
    <string name="share_vacancy">Поделиться вакансией</string>
    <string name="send_email">Отправить email</string>
    <string name="title_contacts">Контакты</string>
    <string name="no_data_available">Информация не указана</string>
    <string name="no_vacancy_available">Вакансия не найдена или\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;удалена</string>
</resources>
