<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="ru.practicum.android.diploma.presentation.TeamFragment">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/margin_16"
        android:paddingEnd="@dimen/margin_12"
        app:contentInsetStartWithNavigation="0dp"
        app:title="@string/title_team"
        app:titleTextAppearance="@style/TitleStyle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_24"
        android:fontFamily="@font/ys_display_bold"
        android:text="@string/text_team_title"
        android:textColor="@color/black"
        android:textSize="@dimen/size_text_32" />

    <TextView
        style="@style/TeamTextStyle"
        android:layout_marginTop="@dimen/margin_24"
        android:text="@string/text_team_bukus" />

    <TextView
        style="@style/TeamTextStyle"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/text_team_petrusсhak" />
</LinearLayout>
