<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/company_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_9"
        tools:src="@drawable/company_logo_example" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_12"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/job_vacancies_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="3"
            android:textColor="@color/black"
            android:textSize="@dimen/size_text_22"
            tools:text="@string/text_job_vacancies_example" />

        <TextView
            android:id="@+id/company_vacancies_text"
            style="@style/VacancyTextStyle"
            tools:text="@string/text_company_vacancies_example" />

        <TextView
            android:id="@+id/payday_vacancies_text"
            style="@style/VacancyTextStyle"
            tools:text="@string/text_payday_vacancies_example" />
    </LinearLayout>

</LinearLayout>
